pong working fine, small changes done in the style.css

--- a/brick-breaker.html
+++ b/brick-breaker.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		
 
-		<title>Pong</title>
+		<title>Brick Breaker</title>
 		
 		<link rel="stylesheet" type="text/css" href="css/styles-games.css">
 		<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -19,6 +19,6 @@
 		</footer>
 
 		<script type="text/javascript" src="js-scripts/GraphicsCommon.js"></script>
-		<script type="text/javascript" src="js-scripts/Pong.js"></script>
+		<script type="text/javascript" src="js-scripts/Brick-Breaker.js"></script>
 	</body>
 </html>
