--- a/car-race.html
+++ b/car-race.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles-games.css">
-	<title>Pong</title>
+	<title>Car Race</title>
 </head>
 <body>
     <canvas id="retroGames" width="800" height="600"></canvas>
     
     <footer>
-		<p>All rights reserved &copy; 2020 by @josselito_rios</p>
+		<p>All rights reserved &copy; 2020 by <a href="https://twitter.com/joseriosdev">@joseriosdev</a></p>
 	</footer>
 	
     <script type="text/javascript" src="js-scripts/Car.js"></script>
