race game working fine

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</a>
 				
 				<a href="car-race.html" class="grid-item">
-					<img src="graphics/car-race.jpg" alt="car-race" width="300">
+					<img src="graphics/car-race.jpg" alt="race" width="300">
 					<h3>Car Race</h3>
 				</a>
 				<a href="brick-breaker.html" class="grid-item">
