small change on credits

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
 		<section>
 			<h2 class="title-color">Credits</h2>
-			<h3>&psi; Programming - Art - Level Design - Sounds & Music &psi; <br> by @joseriosdev</h3>
+			<h3>&psi; Programming - Art &psi; <br> by @joseriosdev</h3>
 			<h2 class="title-color">Special Thanks</h2>
-			<h3>Juan Rios my big bro <br> Chris DeLeon - Incredible game programming master</h3>
+			<h3>Juan Rios my big bro <br> Chris DeLeon - Incredible game programmer</h3>
 		</section>
 	</main>
 	<footer>
